<resources>
    <string name="app_name">Resrv</string>
    <string name="crime_title_hint">Enter a phone number:</string>
    <string name="crime_title_label">Info</string>
    <string name="details_label">Details and Notification Options:</string>
    <string name="crime_solved_label">Solved</string>
    <string name="date_set_bt">Set Date</string>
    <string name="time_set_bt">Set Time</string>
    <string name="ntfy_message">SMS Message</string>
    <string name="ntfy_phone">Phone Call</string>
    <string name="res_lbl">Reservation For:</string>
</resources>
