<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/sv_main"
    >
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:orientation="vertical"
        android:id="@+id/lin_layout_base">

        <VideoView
            android:id="@+id/v_view_food"
            android:layout_width="wrap_content"
            android:layout_height="170dp"
            android:layout_marginTop="15dp"
            android:layout_gravity="center_horizontal"
            android:src="@raw/food"
            />

        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:id="@+id/tvSep"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/res_title_label"/>

        <EditText
            android:id="@+id/name_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter Name:" />

        <EditText
            android:id="@+id/phone_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/res_ph_num" />


        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Reservation Details:"/>


        <Button
            android:id="@+id/buttonDateFrag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date_set_bt" />

        <Button
            android:id="@+id/buttonTimeFrag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/time_set_bt"/>
        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/res_lbl"
            android:id="@+id/res_label"/>

        <TextView
            android:id="@+id/resstring"
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:textSize="20dp" />


        <Button
            android:id="@+id/buttonMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ntfy_message" />

        <Button
            android:id="@+id/buttonPhoneCall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ntfy_phone" />
        <Button
            android:id="@+id/buttonAddRes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Add Reservation!" />



    </LinearLayout>
</ScrollView>